Website/plugins/page-styling/css/page-styling-dark.css
@charset "UTF-8";
html {
  background: #1B1D1E;
}

body {
  background: #1B1D1E;
  color: #f5f5f5;
  font-variant-ligatures: none;
}

#left-col-inner {
  float: none;
  position: sticky;
  top: 10vh;
  max-height: 90vh;
}

#main-col-inner {
  flex-grow: inherit;
}

.navbar-logo-tm {
  color: #e8e8e8;
}

/* Site header */
.navbar {
  background: #212426;
  border-bottom: 1px solid #45485d;
}

.navbar a {
  color: #8DB2EB;
}
.navbar a:hover {
  color: #8DB2EB;
  text-decoration: none;
}
.navbar a:visited {
  color: #8DB2EB;
}

a.navbar-item:hover {
  background: #2d3134;
}

.navbar-item.has-dropdown:focus .navbar-link, .navbar-item.has-dropdown:hover .navbar-link, .navbar-item.has-dropdown.is-active .navbar-link {
  background-color: #2d3134;
}

.navbar-dropdown {
  background-color: #212426;
  border-top: 2px solid #3A3D4E;
}

.navbar-link:not(.is-arrowless)::after {
  border-color: #8DB2EB;
}

.navbar-divider {
  background-color: #1B1D1E;
}

.navbar-menu {
  background-color: #212426;
}

.navbar-dropdown a.navbar-item:focus, .navbar-dropdown a.navbar-item:hover,
a.navbar-item:focus-within, a.navbar-item.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, .navbar-link.is-active {
  background-color: #3A3D4E;
  color: #f5f5f5;
}

a {
  color: #8DB2EB;
}
a:hover {
  color: #8DB2EB;
  text-decoration: underline;
}
a:visited {
  color: #8378E8;
}

.button.is-primary {
  background-color: #8DB2EB !important;
}
.button.is-primary:hover {
  background-color: #4c86e0 !important;
  text-decoration: none;
}

.label {
  color: #d8d8d8;
}

.input, .textarea, .select select {
  background-color: #2d3134;
  border-color: #3A3D4E;
  color: #f5f5f5;
}

.input:hover, .textarea:hover, .select select:hover, .is-hovered.input, .is-hovered.textarea, .select select.is-hovered {
  border-color: #83858D;
}

.input:focus, .textarea:focus, .select select:focus, .is-focused.input, .is-focused.textarea, .select select.is-focused, .input:active, .textarea:active, .select select:active, .is-active.input, .is-active.textarea, .select select.is-active {
  border-color: #8DB2EB;
}

.select:not(.is-multiple):not(.is-loading)::after {
  border-color: #8DB2EB;
}

.select:not(.is-multiple):not(.is-loading):hover::after {
  border-color: #8DB2EB;
}

/* Site footer */
.footer {
  background: #212426;
  border-top: 1px solid #45485d;
  z-index: 50;
}

.has-text-primary {
  color: #8DB2EB !important;
}

.has-text-dark {
  color: #3A3D4E !important;
}

.has-text-danger {
  color: #f00048 !important;
}

.has-text-danger:hover {
  color: #f00048 !important;
}

a.has-text-red, a.has-text-red:hover {
  color: #f00048;
}

.button.is-link {
  background-color: #8DB2EB;
}

.button.is-link:hover {
  background-color: #4c86e0;
}

strong {
  color: #e8e8e8;
}

.raku.links-block .head {
  color: #cccccc;
}
.raku.links-block a {
  color: #8DB2EB;
}
.raku.links-block a:hover {
  color: #4c86e0;
}

/* Hopepage title */
.hero-body {
  background: linear-gradient(180deg, #030303 0.2%, #170F44 1%, #35229E 82.29%, #271974 100%);
  mix-blend-mode: normal;
}

/* Raku page template */
.raku.page-title {
  color: #EED891;
}

.raku.page-header .page-edit {
  color: #83858D;
}
.raku.page-header .page-edit .page-edit-button {
  background: #282c2e;
  color: gainsboro;
  border-color: #3A3D4E;
}
.raku.page-header .page-edit .page-edit-button:hover {
  background: #212426;
}

/* Raku search page */
.raku-search .search-category {
  background: #282c2e;
  border: 1px solid #3A3D4E;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.07);
  color: #f5f5f5;
}
.raku-search .search-match {
  background: #1C6301;
}
.raku-search .search-category-title {
  color: #EED891;
  border-bottom: 1px solid #3A3D4E;
}

/* Categories */
.raku-category.category-block {
  border: 1px solid #3A3D4E;
  border-bottom: 5px solid #45485d;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.07);
}

.raku-category .category-header {
  background: #212426;
  border-bottom: 1px solid #3A3D4E;
  color: #83858D;
}
.raku-category .category-item:not(:last-child) {
  border-bottom: 1px solid #3A3D4E;
}

/* Programs page template */
.raku-programs .programs-item-title {
  border-bottom: 1px solid #3A3D4E;
}

/* Raku headings */
.raku-h1 {
  background: #212426;
  border: 1px solid #3A3D4E;
  border-bottom: 3px solid #EED891;
}

.raku-h2 {
  border-bottom: 3px solid #EED891;
}

.raku-h1, .raku-h2, .raku-h3, .raku-h4, .raku-h5, .raku-h6 {
  colors: #EED891;
}
.raku-h1 a, .raku-h2 a, .raku-h3 a, .raku-h4 a, .raku-h5 a, .raku-h6 a {
  color: #EED891;
}
.raku-h1 code, .raku-h2 code, .raku-h3 code, .raku-h4 code, .raku-h5 code, .raku-h6 code {
  color: unset;
  background: unset;
  font-weight: 600;
}

.raku-h1 a:hover, .raku-h2 a:hover, .raku-h3 a:hover, .raku-h4 a:hover, .raku-h5 a:hover, .raku-h6 a:hover {
  color: #8DB2EB;
  text-decoration: none;
}

.raku-anchor {
  color: #3A3D4E;
}

a.raku-anchor:hover {
  color: #8DB2EB;
}

a.raku-anchor,
.raku-h1 a.raku-anchor, .raku-h2 a.raku-anchor, .raku-h3 a.raku-anchor, .raku-h4 a.raku-anchor, .raku-h5 a.raku-anchor, .raku-h6 a.raku-anchor {
  color: gainsboro;
}
a.raku-anchor:hover,
.raku-h1 a.raku-anchor:hover, .raku-h2 a.raku-anchor:hover, .raku-h3 a.raku-anchor:hover, .raku-h4 a.raku-anchor:hover, .raku-h5 a.raku-anchor:hover, .raku-h6 a.raku-anchor:hover {
  color: #8DB2EB;
}

.raku-h1:hover a.raku-anchor, .raku-h2:hover a.raku-anchor, .raku-h3:hover a.raku-anchor, .raku-h4:hover a.raku-anchor, .raku-h5:hover a.raku-anchor, .raku-h6:hover a.raku-anchor {
  visibility: visible;
}

/* Version note */
.raku.version-note {
  background: #f2f2f2;
  border: 1px solid #3A3D4E;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.07);
}

.version-note-header {
  color: #EED891;
}

.table {
  background-color: #1B1D1E;
  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.07);
  color: #e8e8e8;
}

.table thead td, .table thead th {
  color: #e8e8e8;
  text-align: center;
  vertical-align: middle;
}

.table td, .table th {
  border: 1px solid #3A3D4E;
}

.card {
  color: #f5f5f5;
  background-color: #1B1D1E;
}

.raku-about .card {
  border: 1px solid #e5e5e5;
  border-bottom: 3px solid #e5e5e5;
  box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.07);
}

.raku.tabs {
  background: #282c2e;
  border: 1px solid #3A3D4E;
  border-bottom: unset;
  color: #f5f5f5;
}
.raku.tabs ul {
  border-color: #3A3D4E;
}
.raku.tabs a {
  color: #f5f5f5;
}
.raku.tabs.is-boxed a:hover {
  background-color: #3A3D4E;
  color: #e8e8e8;
}
.raku.tabs.is-boxed a {
  border-right: 1px solid #3A3D4E;
}
.raku.tabs.is-boxed li.is-active a {
  background: #1B1D1E;
  color: gainsboro;
  border-top: 1px solid transparent;
  border-right: 1px solid #3A3D4E;
  border-bottom: 1px solid #3A3D4E;
}

p > code {
  background-color: #212426;
  border: 1px solid #2d3134;
}

a > code {
  color: #8DB2EB;
}

code {
  background-color: #212426;
  color: #EED891;
}

.hero.error-page .hero-body {
  background: #1B1D1E;
}

.error-icon .icon {
  color: #f5f5f5;
}

.hero .error-title {
  color: #f00048;
}

dl {
  margin: 5px;
}
dl dt {
  font-weight: 600;
}
dl dd {
  margin: 5px auto 10px 10px;
}

ul.rakudoc-item {
  list-style: disc;
  padding: 0 0 0 1.5rem;
}
ul.rakudoc-item > ul {
  margin-left: 2em;
  list-style: circle;
}
ul.rakudoc-item > ul > ul {
  margin-left: 2em;
  list-style: square;
}
ul.rakudoc-item > ul > ul > ul {
  margin-left: 2em;
  list-style: disclosure-closed;
}

.pod-output {
  font-family: "Lucida Console", "Courier New", monospace;
  font-weight: 600;
  position: relative;
  padding-left: 2.5rem;
}
.pod-output:before {
  content: "output";
  position: absolute;
  top: 0;
  left: 0;
  writing-mode: vertical-lr;
  border-right: 1px solid gray;
}

.pod-input {
  font-family: "Monaco", "Lucida Console", "Courier New", monospace;
  font-weight: 300;
  position: relative;
  padding-left: 2.5rem;
}
.pod-input:before {
  content: "input";
  position: absolute;
  top: 0;
  left: 0;
  writing-mode: vertical-lr;
  border-right: 1px solid gray;
}

.pod-nested {
  margin: 0.25rem 0 0.25rem 2.5rem;
}

.pod-placement {
  font-family: "Georgia", serif;
  margin: 1.5rem;
}

kbd {
  font-family: monospace;
  font-weight: 600;
}

samp {
  font-family: "Courier new";
  font-weight: 600;
  border-style: none none dotted;
  padding: 0.1em 0.75em;
}

var::before {
  content: "｢";
  padding: 3px;
}
var::after {
  content: "｣";
  padding: 3px;
}

a.button strong {
  color: #282c2e;
}

a.button.is-primary .icon {
  color: #282c2e;
}

/* For Collection */
.raku:not(.links-block) .container .columns {
  display: block;
}
.raku:not(.links-block) .container .columns.listing {
  column-count: 2;
}
.raku:not(.links-block) .container .columns.one-col {
  column-count: 1;
  width: 55vw;
  margin-left: auto;
  margin-right: auto;
}
.raku:not(.links-block) .container .columns > p {
  column-span: all;
  margin: 0 0 2em;
  text-align: center;
}

a.index-entry {
  text-decoration: none;
  cursor: help;
}
a.index-entry span.glossary-entry {
  padding: 0 0.3em 0 0.3em;
  border-radius: 0.5em;
  border: 2px solid #454b4f;
  background-color: #212426;
  color: #f5f5f5;
}
a.index-entry span.glossary-entry:hover::before {
  opacity: 1;
}
a.index-entry span.glossary-entry::before {
  content: attr(data-index-text);
  position: absolute;
  display: inline-block;
  transform: translateY(-100%);
  margin-left: 15px; /* and add a small left margin */
  padding: 0.2em 0.5em 0.2em 0.5em;
  border-radius: 10px;
  background: #f7f7f7;
  color: #8DB2EB;
  text-align: center;
  opacity: 0;
  transition: 0.3s opacity;
}

